[package]
name = "wl-clipboard-rs"
version = "0.8.1" # remember to update html_root_url
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
description = "Access to the Wayland clipboard for terminal and other window-less applications."
edition = "2021"
license = "MIT/Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/wl-clipboard-rs"
repository = "https://github.com/YaLTeR/wl-clipboard-rs"
keywords = ["wayland", "clipboard"]
categories = ["command-line-utilities"]

[workspace]
members = [".", "wl-clipboard-rs-tools"]

[dependencies]
derive-new = "0.6.0"
libc = "0.2.153"
log = "0.4.21"
nix = { version = "0.28.0", features = ["fs", "process", "event"] }
os_pipe = { version = "1.1.5", features = ["io_safety"] }
tempfile = "3.10.1"
thiserror = "1"
tree_magic_mini = "3.0.3"
wayland-backend = "0.3.3"
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }

[dev-dependencies]
wayland-server = "0.31.1"
wayland-protocols = { version = "0.31.2", features = ["server"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["server"] }
proptest = "1.4.0"
proptest-derive = "0.4.0"

[features]
# Link to libwayland-client.so instead of using the Rust implementation.
native_lib = ["wayland-backend/client_system", "wayland-backend/server_system"]

dlopen = ["native_lib", "wayland-backend/dlopen", "wayland-backend/dlopen"]
