[package]
name = "wl-clipboard-rs-tools"
version.workspace = true
authors.workspace = true
description = "Terminal utilities for accessing the Wayland clipboard."
edition.workspace = true
license.workspace = true

readme = "README.md"
repository.workspace = true
keywords.workspace = true
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive", "wrap_help"] }
libc.workspace = true
log.workspace = true
mime_guess = "2.0.4"
rustix = { workspace = true, features = ["stdio"] }
stderrlog = "0.6.0"
wl-clipboard-rs = { path = "../", version = "0.8.1" }

[features]
# Link to libwayland-client.so instead of using the Rust implementation.
native_lib = [
    "wl-clipboard-rs/native_lib",
]

dlopen = [
    "wl-clipboard-rs/dlopen",
]
