[package]
name = "wl-clipboard-tools"
version = "0.5.0"
edition = "2018"

[dependencies]
wl-clipboard-rs = { path = "../" }
anyhow = "1.0.56"
libc = "0.2"
log = "0.4"
mime_guess = "2"
nix = "0.18"
stderrlog = "0.5"
structopt = { version = "0.3", features = ["wrap_help"] }

[features]
# Link to libwayland-client.so instead of using the Rust implementation.
native_lib = [
    "wl-clipboard-rs/native_lib",
]

dlopen = [
    "wl-clipboard-rs/dlopen",
]
